tests-integration/tests/roundtrip/invalid/semantic/typecheck/mismatched_inequality_set_matrix/tree-sitter.expected-error.txt
tests/roundtrip/invalid/semantic/typecheck/mismatched_inequality_set_matrix/input.essence:3:16:
  |
3 | such that x != y
  |                ^
Type error: y
	Expected: set
	Got: matrix